cmake_minimum_required(VERSION 3.0)

project(aoc2018)

include_directories(${PROJECT_SOURCE_DIR})

add_executable(day01 src/day01.cpp)
add_executable(day02 src/day02.cpp)
add_executable(day03 src/day03.cpp)
add_executable(day04 src/day04.cpp)
add_executable(day05 src/day05.cpp)
add_executable(day06 src/day06.cpp)
add_executable(day07 src/day07.cpp)
add_executable(day08 src/day08.cpp)
add_executable(day09 src/day09.cpp)
add_executable(day10 src/day10.cpp)
add_executable(day11 src/day11.cpp)
add_executable(day12 src/day12.cpp)
add_executable(day13 src/day13.cpp)
