cmake_minimum_required(VERSION 3.0)

project(aoc2018)

include_directories(${PROJECT_SOURCE_DIR})

add_executable(day01 src/day01.cc)
add_executable(day02 src/day02.cc)
add_executable(day03 src/day03.cc)
add_executable(day04 src/day04.cc)
add_executable(day05 src/day05.cc)
add_executable(day06 src/day06.cc)
add_executable(day07 src/day07.cc)
add_executable(day08 src/day08.cc)
add_executable(day09 src/day09.cc)
add_executable(day10 src/day10.cc)
add_executable(day11 src/day11.cc)
add_executable(day12 src/day12.cc)
add_executable(day13 src/day13.cc)
add_executable(day14 src/day14.cc)
